# godbledger

./: .dockerignore  .gitignore  .golangci.yml  .travis.yml  BUILD.bazel  Dockerfile.build  Makefile  README.md  WORKSPACE  database.go  db.go  docker-compose.yml  go.mod  go.sum  godbledger  ledger.db  main.go  main_test.go  test.sh  transactions.go
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml  github-releases.yml  ppa.yml  releases.yml  test.yml
cmd/: flags.go
core/: service_registry.go  transactions.go
db/: db.go
godbledger/: .gitignore  main.go  main_test.go
godbledger/cmd/: config.go  flags.go  logutil.go
godbledger/core/: transactions.go  transactions_test.go  trialbalance.go
godbledger/db/: database.go  db.go  dbfuncs.go
godbledger/db/mysql/: mysqldb.go  mysqlfuncs.go
godbledger/db/mysqldb/: mysql_test.go  mysqldb.go  mysqlfuncs.go
godbledger/db/sqlite3/: sqlite3db.go  sqlite3funcs.go
godbledger/db/sqlite3db/: sqlite3db.go  sqlite3funcs.go
godbledger/ledger/: ledger.go
godbledger/node/: node.go  node_test.go
godbledger/rpc/: ledger_server.go  service.go  service_test.go
godbledger/version/: version.go
internal/: logscontain.go
ledger/: ledger.go
ledger-cli/: .gitignore  addcurrency.go  addfeedaccount.go  delete.go  file.go  jsonjournal.go  ledgerReader.go  main.go  main_test.go  parse.go  tagaccount.go  transaction.go  types.go  wizard.go
ledger_cli/: .gitignore  addcurrency.go  delete.go  file.go  jsonjournal.go  ledgerReader.go  main.go  parse.go  tagaccount.go  test.test  transaction.go  types.go  wizard.go
ledger_cli/test/: transaction-codes-1.test
node/: node.go
proto/: BUILD.bazel  transaction.pb.go  transaction.proto  transaction_grpc.pb.go
proto/transaction/: transaction.pb.go  transaction.proto  transaction_grpc.pb.go
reporter/: .gitignore  console.go  main.go  pdfgenerator.go  transactionlisting.go  trialbalance.go
rpc/: service.go
server/: BUILD.bazel  main.go  main_test.go
server/cmd/: BUILD.bazel  config.go  flags.go
server/core/: BUILD.bazel  service_registry.go
server/db/: BUILD.bazel  db.go  dbfuncs.go
server/ledger/: BUILD.bazel  ledger.go
server/ledgerdata/: ledger.db
server/node/: BUILD.bazel  node.go
server/rpc/: BUILD.bazel  ledger_server.go  service.go
server/version/: BUILD.bazel  version.go
shared/: logscontain.go
tests/: README.md  basic_test.go  basic_test_util.go  endtoend_test.go  init_test.go  logfile.txt  minimal_e2e_test.go  mysql_test.go  secure_connection_test.go  sqlite_test.go
tests/certs/: ca-cert.pem  ca-cert.srl  ca-key.pem  client-cert.pem  client-ext.cnf  client-key.pem  client-req.pem  server-cert.pem  server-key.pem  server-req.pem
tests/components/: godbledger_node.go
tests/evaluators/: double_transaction.go  double_transaction_ignore_one.go  operations.go  single_transaction.go  trading_simulator.go
tests/helpers/: helpers.go
tests/params/: params.go
tests/testdata/BasicTests/: add1.json
tests/types/: types.go
utils/: Dockerfile.build  basic_chart_of_accounts.go  ci-notes.md  ci.go  download-go-libraries.sh  gen.sh  make-release.sh  tag_release.sh  testdata.go  wait_entrypoint.sh
utils/deb/: deb.control  deb.copyright  deb.install  deb.rules  godbledger-core.postinst  godbledger-core.postrm  godbledger-core.preinst  godbledger-core.prerm  godbledger-core.service
utils/kubernetes/: README.md  k8s.00.namespace.yml  k8s.01.mysql.secrets.yml  k8s.02.mysql.volume.yml  k8s.03.mysql.yml  k8s.04.godbledger.yml  k8s.config.toml
utils/ledgercli-files/: transaction-codes-2.test
version/: version.go
