load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "transaction_proto",
    srcs = ["transaction.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "transaction_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/darcys22/godbledger/proto",
    proto = ":transaction_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":transaction_go_proto"],
    importpath = "github.com/darcys22/godbledger/proto",
    visibility = ["//visibility:public"],
)
