load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/darcys22/godbledger/server",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_darcys22_godbledger//cmd:go_default_library",
        "@com_github_darcys22_godbledger//ledger:go_default_library",
        "@com_github_darcys22_godbledger//node:go_default_library",
        "@com_github_darcys22_godbledger//version:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_darcys22_godbledger//core:go_default_library",
        "@com_github_darcys22_godbledger//ledger:go_default_library",
    ],
)
