load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "service_registry.go",
        "transactions.go",
    ],
    importpath = "github.com/darcys22/godbledger/server/core",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rs_xid//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
