load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["db.go"],
    importpath = "github.com/darcys22/godbledger/server/db",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mattn_go_sqlite3//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
