load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ledger.go"],
    importpath = "github.com/darcys22/godbledger/server/ledger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_darcys22_godbledger//cmd:go_default_library",
        "@com_github_darcys22_godbledger//core:go_default_library",
        "@com_github_darcys22_godbledger//db:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)
