load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["node.go"],
    importpath = "github.com/darcys22/godbledger/server/node",
    visibility = ["//visibility:public"],
    deps = [
        "//server/core:go_default_library",
        "//server/db:go_default_library",
        "//server/version:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)
